[build-system]
requires = ["setuptools", "wheel"]

[tool.mypy]
strict = true
files = ["pysasl", "test"]

[[tool.mypy.overrides]]
module = "passlib.*"
ignore_missing_imports = true

[tool.pyright]
include = ["pysasl", "test"]
venv = ".venv"

[tool.pytest.ini_options]
norecursedirs = "doc"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "NotImplemented",
    "^\\s*...\\s*$",
    "def __repr__",
]
