[build-system]
requires = ['setuptools', 'wheel']

[tool.mypy]
strict = true
files = ['pysasl', 'test']

[[tool.mypy.overrides]]
module = 'passlib.*'
ignore_missing_imports = true

[tool.bandit]
skips = ['B101']

[tool.pytest.ini_options]
norecursedirs = 'doc'

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'pragma: no cover',
    'NotImplemented',
    '^\s*...\s*$',
    'def __repr__',
]
